# vulkan-test-ohos

./: .gitignore  CMakeLists.txt  README.md  rebuild.sh
include/: VulkanTools.h
include/native_window/: buffer_handle.h  external_window.h  graphic_error_code.h
shaders/: compile.sh  composition.frag  composition.vert  triangle.frag  triangle.frag.spv
src/: CMakeLists.txt  VulkanTools.cpp  hello.cpp
src/shaders/: composition.frag.spv  composition.vert.spv  triangle.vert  triangle.vert.spv
